--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
        
         <section>
             <h2>Iconic Baseball Moment</h2>
-            <img src="Image/babe-ruth-2.jpg" alt="Baseball on the field" width="400">
+            <img src="Image/babe-ruth-2.jpg" alt="Babe ruth picture" width="400">
         </section>
     </main>
 
