--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Famous Baseball Players</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
