--- a/Index.html
+++ b/Index.html
@@ -46,13 +46,15 @@
        
         <section id="iconic-moment">
             <h2>Iconic Baseball Moment</h2>
-            <img src="Image/babe-ruth-2.jpg" alt="Babe ruth picture" width="400">
+            <img src="Image/babe-ruth-2.jpg" alt="Babe Ruth, one of baseball’s most legendary players, holding a bat">
         </section>
     </main>
 
     
     <footer id="footer-section">
-        <a href="page2.html">Read more on Page 2</a>
+         <nav>
+            <a href="page2.html">Learn more about baseball history</a>
+        </nav>
     </footer>
 </body>
 </html>
