--- a/page2.html
+++ b/page2.html
@@ -37,14 +37,16 @@
         
         <section id="iconic-moment">
             <h2>Baseball Legends</h2>
-            <img src="Image/babe-ruth-full-swing-170569940-5c91b0c0c9e77c0001a9277c.jpg" alt="Babe Ruth swinging a bat" width="400">
+            <img src="Image/babe-ruth-full-swing-170569940-5c91b0c0c9e77c0001a9277c.jpg" alt="Babe Ruth swinging a bat">
         </section>
     </main>
 
     
  
     <footer id="footer-section">
-        <a href="index.html">Back to Home</a>
+        <nav>
+             <a href="index.html">Back to Baseball History Homepage</a>
+        </nav>
     </footer>
 </body>
 </html>
